--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "chalk": "^5.2.0",
     "fast-fuzzy": "^1.12.0",
     "fs-extra": "^11.1.0",
+    "hyperlinker": "^1.0.0",
     "inquirer": "^9.1.4",
     "inquirer-autocomplete-prompt": "^3.0.0",
     "inquirer-fuzzy-path": "^2.3.0",
     "ora": "^6.1.2",
     "python-shell": "^3.0.1",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "terminal-link": "^3.0.0"
   }
 }
