connect with python script

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,7 @@ dist
 
 # Digital Law Lab Config
 dll_config/**
+# Digital Law Lab Config
+dll_config/**
+# Digital Law Lab Config
+dll_config/**
