--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dll-cli",
   "version": "0.1.0",
-  "description": "A CLI tool for Digital Law Lab providing necessary project management functionalities for testing (i.e. pushing code to Docassemble's playground) and other purposes",
+  "description": "A CLI tool for Digital Law Lab providing necessary DA package management functionalities for testing (i.e. pushing to Docassemble's playground) and other purposes",
   "main": "src/index.js",
   "bin": "src/index.js",
   "type": "module",
