--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "dll-cli",
-  "version": "0.1.0",
+  "version": "0.2.4",
   "description": "A CLI tool for Digital Law Lab providing necessary DA package management functionalities for testing (i.e. pushing to Docassemble's playground) and other purposes",
-  "main": "src/index.js",
-  "bin": "src/index.js",
+  "main": "dist/index.js",
+  "bin": {
+    "dll-cli": "./dist/index.js"
+  },
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [
     "cli",
@@ -18,12 +21,26 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.2.0",
+    "execa": "^6.1.0",
     "fast-fuzzy": "^1.12.0",
     "fs-extra": "^11.1.0",
     "hyperlinker": "^1.0.0",
     "inquirer": "^9.1.4",
     "inquirer-autocomplete-prompt": "^3.0.0",
+    "listr2": "^5.0.7",
     "ora": "^6.1.2",
     "python-shell": "^3.0.1"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.32",
+    "@swc/helpers": "^0.4.14",
+    "@types/fs-extra": "^11.0.1",
+    "@types/inquirer": "^9.0.3",
+    "@types/inquirer-autocomplete-prompt": "^3.0.0",
+    "@types/node": "^18.11.18",
+    "prettier": "^2.8.3",
+    "regenerator-runtime": "^0.13.11",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
