uselistr drop python-shell

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ dll_config/**
 dll_config/**
 # Digital Law Lab Config
 dll_config/**
+# Digital Law Lab Config
+dll_config/**
+# Digital Law Lab Config
+dll_config/**
+# Digital Law Lab Config
+dll_config/**
