--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "dll-cli",
-  "version": "0.2.4",
+  "version": "0.7.0",
   "description": "A CLI tool for Digital Law Lab providing necessary DA package management functionalities for testing (i.e. pushing to Docassemble's playground) and other purposes",
-  "main": "dist/index.js",
   "bin": {
     "dll-cli": "./dist/index.js"
   },
   "type": "module",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc && yarpm-pnpm run copy",
+    "copy": "ncp src/python-scripts dist/python-scripts",
+    "test": "ts-node src/listr2test.ts"
   },
   "keywords": [
     "cli",
@@ -28,8 +29,7 @@
     "inquirer": "^9.1.4",
     "inquirer-autocomplete-prompt": "^3.0.0",
     "listr2": "^5.0.7",
-    "ora": "^6.1.2",
-    "python-shell": "^3.0.1"
+    "ora": "^6.1.2"
   },
   "devDependencies": {
     "@swc/core": "^1.3.32",
@@ -38,9 +38,11 @@
     "@types/inquirer": "^9.0.3",
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
     "@types/node": "^18.11.18",
+    "ncp": "^2.0.0",
     "prettier": "^2.8.3",
     "regenerator-runtime": "^0.13.11",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yarpm": "^1.2.0"
   }
 }
