--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
     "moduleResolution": "nodenext",
     "lib": ["es6"],
     "target": "ES2017",
-    "outDir": "dist",
+    "outDir": "lib",
     "baseUrl": ".",
     "types": ["node"],
     "rootDir": "src",
-    "sourceMap": true,
+    "sourceMap": false,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "removeComments": true,
